polkadot/xcm/procedural/tests/ui/builder_pattern/buy_execution_named_fields.stderr
error: BuyExecution should have named fields
  --> tests/ui/builder_pattern/buy_execution_named_fields.rs:25:5
   |
25 |     BuyExecution(u128),
   |     ^^^^^^^^^^^^^^^^^^
